--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "使用tensorflow.js 根据亚马逊分类排名预测销量",
   "main": "index.js",
   "scripts": {
-    "tarin": "npx parcel train/index.html"
+    "train": "parcel train/*.html"
   },
   "author": "",
   "license": "ISC",
